crates/data-dict/tests/snapshots/validate_meta__missing_column_in_data_reported.snap
---
source: crates/data-dict/tests/validate_meta.rs
expression: "common::sanitize(&problems.render().join(\"\\n\"), &dir)"
---
Error: [M02] Every column in the dictionary must be present in the data.
    ╭─[ dict.yaml:14:15 ]
    │
  4 │   animals:
    │ 
 14 │       - name: height
    │               ───┬──  
    │                  ╰──── is missing from the data
────╯
